Add conversion test example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,6 @@
-add_executable(example main.cpp)
-set_target_properties(example PROPERTIES
+add_executable(conversion conversion.cpp)
+set_target_properties(conversion PROPERTIES
         CXX_STANDARD 17
         CXX_STANDARD_REQUIRED YES)
-target_link_libraries(example PRIVATE eclpp::eclpp)
+target_link_libraries(conversion PRIVATE eclpp::eclpp)
+
