Add first draft of type conversion between lisp and cpp

--- a/clbind/CMakeLists.txt
+++ b/clbind/CMakeLists.txt
@@ -1,11 +1,16 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 project(clbind VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+
 add_library(clbind INTERFACE)
 target_sources(clbind INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include/clbind/type_conversion.hpp")
 target_include_directories(clbind INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include")
-add_library(clbind::clbind ALIAS clbind)
 
+add_library(clbind::clbind ALIAS clbind)
 
 add_executable(type_conversion "examples/type_conversion.cpp")
 target_link_libraries(type_conversion clbind::clbind)
