--- a/clbind/CMakeLists.txt
+++ b/clbind/CMakeLists.txt
@@ -4,6 +4,7 @@ project(clbind VERSION 0.1 LANGUAGES CXX)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 find_package(Ecl REQUIRED)
+#find_package(Boost 1.68.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -20,7 +21,9 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # target_link_libraries(type_conversion clbind::clbind)
 
 add_library(clbind INTERFACE)
-target_sources(clbind INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include/clbind/package.hpp")
+target_sources(clbind INTERFACE
+    "${CMAKE_CURRENT_LIST_DIR}/include/clbind/package.hpp"
+    "${CMAKE_CURRENT_LIST_DIR}/include/clbind/function_traits.hpp")
 target_include_directories(clbind INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include")
 target_link_libraries(clbind INTERFACE Ecl::Ecl)
 add_library(clbind::clbind ALIAS clbind)
